--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=root
 spring.datasource.dbcp.test-while-idle = true
 spring.datasource.dbcp.validation-query = SELECT 1
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=always
